Current API VERSION: 1.0.1

ctools 6.x-1.0-dev
==================
#451078: Fix silly typo preventing contexts from getting to views. Again.
#457376: Text fields need array defaults. This only broke in pgsql.
Add a hook to allow other modules to cooperate a bit more easily with node page overriding.
#472222: Prevent modules providing invalid user data from causing warnings in profile content.
#478438 by nickl: Allow passing items to the data() element.
#480252 Fix some PHP notices.
#447064 by nickl: Improve requirements message when css cache directory cannot be created.
#481928: Needed indexes on delegator handlers and pages tables.
#484284 by crea: Add a node links content type to print just a node's links.
#485486 by nrambeck: term view override was not setting breadcrumb like taxonomy/term is supposed to.

ctools 6.x-1.0-beta3
==================
#459716: content.theme.inc missing typo caused PHP error.
#455732 by dereine: Restore code to pull the title from the blocks table for block types.
#451928 by josh_k: Allow file uploads in the modal.
#447920: Ensure there is a context selector for the "terms" argument and context converters so it can be used with Views.
#458300: Panels not using proper method to override the path for the view.
Add edit tabs to pages. Up API version to 1.0.1