@@ -2,7 +2,7 @@
 There are two primary pieces to using plugins. The first is getting the data, and the second is using the data.
 
 <h3>Getting the data</h3>
-To create a plugin, a module only has to execute ctools_get_plugins with the write data:
+To create a plugin, a module only has to execute ctools_get_plugins with the right data:
 
 <pre>
   ctools_include('plugins');
@@ -65,6 +65,10 @@ The following information can be specified:
 <dd>The name of the hook used to collect data for this plugin. Normally this is $module . '_' . $type -- but this can be changed here. If you change this, you MUST be sure to document this for your plugin implementors as it will change the format of the specially named hook.
 <dt>process</dt>
 <dd>An optional function callback to use for processing a plugin. This can be used to provide automated settings that require code. The parameters on this callback are: <strong>callback(&$plugin, $info)</strong> where $plugin is a reference to the plugin as processed and $info is the fully processed result of hook_ctools_plugin_api_info().
+<dt>info file</dt>
+<dd>If set to TRUE, then the plugin will look for a .info file instead of a .inc. Internally, this will look exactly the same, though obviously a .info file cannot contain functions. This can be good for styles that may not need to contain code.</dd>
+<dt>extension</dt>
+<dd>Can be used to change the extension on a file. By default the extension will be "inc", though it will default to "info" if "info files" is set to true. Do not include the dot in the extension if changing it, that will be added automatically.</dd>
 </dl>
 
 In addition, there is a 'module', 'type' and 'hook' settings; these are for internal use of the plugin system and you should not change these.
